# board_games

./: .gitignore  Board.cpp  Board.h  CMakeLists.txt  Field.cpp  Field.h  Figura.cpp  Figura.h  Figure.cpp  Figure.h  Game.cpp  Game.h  Gra.cpp  Gra.h  Gracz.cpp  Gracz.h  Plansza.cpp  Plansza.h  Player.h  Pole.cpp  Pole.h  README.md  Validator.cpp  Validator.h  main.cpp
Games/TickTackToe/: TickTackToeFigure.cpp  TickTackToeFigure.h  TickTackToeGameCore.cpp  TickTackToeGameCore.h  TickTackToePlayer.cpp  TickTackToePlayer.h
Gry/KolkoIKrzyzyk/: TickTackToe.cpp  TickTackToe.h  TickTackToeFigure.h
